tests/errors/test_61.x
// Imported file does not exist

import "haha/what.x" as What;

import "../../lib/math.x" as Math;


fn main() -> int { return 0; }